simplejava.java
/* Generated By:JavaCC: Do not edit this line. simplejava.java */
public class simplejava implements simplejavaConstants {

  static final public ASTProgram program() throws ParseException {
 Token t; ASTClasses classes = null; ASTClass classs; ASTFunctionDefinitions funcDefs = null; ASTFunctionDefinition funcDef;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      classs = classDef();
                                if(classes == null)
                                   classes = new ASTClasses(classs);
                                        else
                                   classes.addElement(classs);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      funcDef = funcDecl();
                             if(funcDefs == null)
                                funcDefs = new ASTFunctionDefinitions(funcDef);
                             else
                                funcDefs.addElement(funcDef);
    }
    t = jj_consume_token(0);
     {if (true) return new ASTProgram(classes, funcDefs, t.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTClass classDef() throws ParseException {
 Token name; ASTInstanceVariableDefs instVars = null;
    jj_consume_token(CLASS);
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(LEFT_CURLY_BRACE);
    instVars = varDef(instVars);
    jj_consume_token(RIGHT_CURLY_BRACE);
         {if (true) return new ASTClass(name.image, instVars, name.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTInstanceVariableDefs varDef(ASTInstanceVariableDefs instVars) throws ParseException {
 ASTInstanceVariableDef instVar; Token type; Token name; int arrDim = 0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      type = jj_consume_token(IDENTIFIER);
      name = jj_consume_token(IDENTIFIER);
      arrDim = arrayDim(arrDim);
      jj_consume_token(SEMICOLON);
         instVar = new ASTInstanceVariableDef(type.image, name.image, arrDim, type.beginLine);
         if(instVars != null) instVars.addElement(instVar); else instVars = new ASTInstanceVariableDefs(instVar);
      varDef(instVars);
         {if (true) return instVars;}
      break;
    default:
      jj_la1[2] = jj_gen;
         {if (true) return instVars;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public int arrayDim(int arrDim) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_SQUARE_BRACE:
      jj_consume_token(LEFT_SQUARE_BRACE);
      jj_consume_token(RIGHT_SQUARE_BRACE);
      arrDim = arrayDim(arrDim);
                                                                            {if (true) return arrDim + 1;}
      break;
    default:
      jj_la1[3] = jj_gen;
         {if (true) return arrDim;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionDefinition funcDecl() throws ParseException {
 Token type; Token name; ASTFormals formals; ASTFunctionDefinition funcDef;
    type = jj_consume_token(IDENTIFIER);
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(LEFT_PARENTHESIS);
    formals = formParamList();
    jj_consume_token(RIGHT_PARENTHESIS);
    funcDef = funcDeclS(type, name, formals);
                 {if (true) return funcDef;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionDefinition funcDeclS(Token type, Token name, ASTFormals formals) throws ParseException {
 ASTStatement body;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      funcProto();
                         {if (true) return new ASTPrototype(type.image, name.image, formals, type.beginLine);}
      break;
    case LEFT_CURLY_BRACE:
      body = funcDef();
                          {if (true) return new ASTFunction(type.image, name.image, formals, body, type.beginLine);}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void funcProto() throws ParseException {
    jj_consume_token(SEMICOLON);
  }

  static final public ASTFormals formParamList() throws ParseException {
 ASTFormals formals = null; ASTFormal formal;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      formal = formParam();
                              formals = new ASTFormals(formal);
      formals = formParamListS(formals);
         {if (true) return formals;}
      break;
    default:
      jj_la1[5] = jj_gen;
         {if (true) return formals;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTFormals formParamListS(ASTFormals formals) throws ParseException {
 ASTFormal formal;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      formal = formParam();
                                      formals.addElement(formal);
      formals = formParamListS(formals);
                                                                                                      {if (true) return formals;}
      break;
    default:
      jj_la1[6] = jj_gen;
         {if (true) return formals;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTFormal formParam() throws ParseException {
 Token type; Token name; int arrDim = 0;
    type = jj_consume_token(IDENTIFIER);
    name = jj_consume_token(IDENTIFIER);
    arrDim = arrayDim(arrDim);
         {if (true) return new ASTFormal(type.image, name.image, arrDim, type.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement funcDef() throws ParseException {
 ASTStatements stats = null; ASTStatement stat; Token t;
    t = jj_consume_token(LEFT_CURLY_BRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FOR:
      case WHILE:
      case DO:
      case IF:
      case RETURN:
      case SEMICOLON:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      stat = statement();
          if(stats != null) stats.addElement(stat); else stats = new ASTStatements(stat);
    }
    jj_consume_token(RIGHT_CURLY_BRACE);
         if(stats == null) stats = new ASTStatements(); {if (true) return stats;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement statement() throws ParseException {
 ASTStatement stat; Token name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      name = jj_consume_token(IDENTIFIER);
      stat = statementS(name);
      jj_consume_token(SEMICOLON);
                                                                 {if (true) return stat;}
      break;
    case IF:
      stat = ifStat();
                         {if (true) return stat;}
      break;
    case WHILE:
      stat = whileStat();
                            {if (true) return stat;}
      break;
    case DO:
      stat = doWhile();
                          {if (true) return stat;}
      break;
    case FOR:
      stat = forStat();
                          {if (true) return stat;}
      break;
    case RETURN:
      stat = returnStat();
      jj_consume_token(SEMICOLON);
                                         {if (true) return stat;}
      break;
    case SEMICOLON:
      name = jj_consume_token(SEMICOLON);
                            {if (true) return new ASTEmptyStatement(name.beginLine);}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTReturnStatement returnStat() throws ParseException {
 ASTExpression expr; Token t;
    t = jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case LEFT_PARENTHESIS:
    case MINUS:
    case NOT:
    case IDENTIFIER:
    case INTEGER_LITERAL:
      expr = orExp();
                                      {if (true) return new ASTReturnStatement(expr, expr.line());}
      break;
    default:
      jj_la1[9] = jj_gen;
                                 {if (true) return new ASTReturnStatement(null, t.beginLine);}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTForStatement forStat() throws ParseException {
 ASTStatement init; ASTExpression test; ASTStatement inc; ASTStatement body; Token start;
    start = jj_consume_token(FOR);
    jj_consume_token(LEFT_PARENTHESIS);
    init = forInit(start);
    jj_consume_token(SEMICOLON);
    test = orExp();
    jj_consume_token(SEMICOLON);
    inc = forInit(start);
    jj_consume_token(RIGHT_PARENTHESIS);
    body = thenStat();
                 {if (true) return new ASTForStatement(init, test, inc, body, start.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement forInit(Token start) throws ParseException {
 Token name; ASTBaseVariable var; ASTStatement stat;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      name = jj_consume_token(IDENTIFIER);
                             var = new ASTBaseVariable(name.image, name.beginLine);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        stat = varDecStat(name);
        break;
      case INC_DOWN:
      case INC_UP:
        stat = incStat(var);
        break;
      case GETS:
        stat = assignStat(var);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                          {if (true) return stat;}
      break;
    default:
      jj_la1[11] = jj_gen;
         {if (true) return new ASTEmptyStatement(start.beginLine);}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTDoWhileStatement doWhile() throws ParseException {
 ASTExpression test; ASTStatement body; Token start;
    start = jj_consume_token(DO);
    body = thenStat();
    jj_consume_token(WHILE);
    jj_consume_token(LEFT_PARENTHESIS);
    test = orExp();
    jj_consume_token(RIGHT_PARENTHESIS);
    jj_consume_token(SEMICOLON);
         {if (true) return new ASTDoWhileStatement(test, body, start.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTWhileStatement whileStat() throws ParseException {
 ASTExpression test; ASTStatement body; Token start;
    start = jj_consume_token(WHILE);
    jj_consume_token(LEFT_PARENTHESIS);
    test = orExp();
    jj_consume_token(RIGHT_PARENTHESIS);
    body = thenStat();
         {if (true) return new ASTWhileStatement(test, body, start.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement ifStat() throws ParseException {
 Token start; ASTExpression expr; ASTStatement thenState; ASTStatement elseState;
    start = jj_consume_token(IF);
    jj_consume_token(LEFT_PARENTHESIS);
    expr = orExp();
    jj_consume_token(RIGHT_PARENTHESIS);
    thenState = thenStat();
    elseState = elseStat();
                 {if (true) return new ASTIfStatement(expr, thenState, elseState, start.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement thenStat() throws ParseException {
 ASTStatement stat;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_CURLY_BRACE:
      stat = funcDef();
                          {if (true) return stat;}
      break;
    case FOR:
    case WHILE:
    case DO:
    case IF:
    case RETURN:
    case SEMICOLON:
    case IDENTIFIER:
      stat = statement();
                            {if (true) return stat;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement elseStat() throws ParseException {
 ASTStatement stat;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      stat = thenStat();
                                  {if (true) return stat;}
      break;
    default:
      jj_la1[13] = jj_gen;
         {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement statementS(Token name) throws ParseException {
 ASTStatement stat; ASTVariable var;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_SQUARE_BRACE:
    case DOT:
    case GETS:
    case INC_DOWN:
    case INC_UP:
      var = expressionS(new ASTBaseVariable(name.image, name.beginLine));
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GETS:
        stat = assignStat(var);
        break;
      case INC_DOWN:
      case INC_UP:
        stat = incStat(var);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                        {if (true) return stat;}
      break;
    case IDENTIFIER:
      stat = varDecStat(name);
                                 {if (true) return stat;}
      break;
    case LEFT_PARENTHESIS:
      stat = funcCallStat(name);
                                   {if (true) return stat;}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionCallStatement funcCallStat(Token name) throws ParseException {
 ASTFunctionCallStatement fcStat = new ASTFunctionCallStatement(name.image, name.beginLine);
    jj_consume_token(LEFT_PARENTHESIS);
    fcStat = expListS(fcStat);
    jj_consume_token(RIGHT_PARENTHESIS);
                                                                          {if (true) return fcStat;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionCallStatement expListS(ASTFunctionCallStatement fcStat) throws ParseException {
 ASTExpression expr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case LEFT_PARENTHESIS:
    case MINUS:
    case NOT:
    case IDENTIFIER:
    case INTEGER_LITERAL:
      expr = orExp();
                        fcStat.addElement(expr);
      fcStat = expListSS(fcStat);
                                                                              {if (true) return fcStat;}
      break;
    default:
      jj_la1[16] = jj_gen;
         {if (true) return fcStat;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionCallStatement expListSS(ASTFunctionCallStatement fcStat) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      fcStat = expListS(fcStat);
                                           {if (true) return fcStat;}
      break;
    default:
      jj_la1[17] = jj_gen;
         {if (true) return fcStat;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTVariableDefStatement varDecStat(Token type) throws ParseException {
 Token name; int arrDim = 0; ASTExpression expr;
    name = jj_consume_token(IDENTIFIER);
    arrDim = arrayDim(arrDim);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GETS:
      expr = varDecAssign();
                 {if (true) return new ASTVariableDefStatement(type.image, name.image, arrDim, expr, type.beginLine);}
      break;
    default:
      jj_la1[18] = jj_gen;
         {if (true) return new ASTVariableDefStatement(type.image, name.image, arrDim, type.beginLine);}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression varDecAssign() throws ParseException {
 ASTExpression expr;
    jj_consume_token(GETS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case LEFT_PARENTHESIS:
    case MINUS:
    case NOT:
    case IDENTIFIER:
    case INTEGER_LITERAL:
      expr = orExp();
      break;
    case NEW:
      expr = newExp();
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                   {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTAssignmentStatement assignStat(ASTVariable var) throws ParseException {
 ASTExpression expr;
    jj_consume_token(GETS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case LEFT_PARENTHESIS:
    case MINUS:
    case NOT:
    case IDENTIFIER:
    case INTEGER_LITERAL:
      expr = orExp();
      break;
    case NEW:
      expr = newExp();
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return new ASTAssignmentStatement(var, expr, var.line());}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement incStat(ASTVariable var) throws ParseException {
 ASTVariableExpression varExp = new ASTVariableExpression(var, var.line());
        ASTIntegerLiteral intLit = new ASTIntegerLiteral(1, var.line()); ASTOperatorExpression opExp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INC_UP:
      jj_consume_token(INC_UP);
                  opExp = new ASTOperatorExpression(varExp, intLit, "+", var.line());
                                {if (true) return new ASTAssignmentStatement(var, opExp, var.line());}
      break;
    case INC_DOWN:
      jj_consume_token(INC_DOWN);
                         opExp = new ASTOperatorExpression(varExp, intLit, "-", var.line());
                                        {if (true) return new ASTAssignmentStatement(var, opExp, var.line());}
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
